* troff: Handles input characters according to LC_CTYPE now in combination
  with the new font setup. In a UTF-8 locale, most characters that are
  present in standard, Expert, and Symbol PostScript fonts are supported;
  otherwise, a locale-specific subset of them is available.
* troff: A PostScript device with a resolution of 72000 dpi, named "ps",
  is available, and is used by default.
* troff: Support for pairwise kerning has been added.
* dpost: The PostScript output is now expected to conform to Adobe's
  Document Structuring Conventions, version 3.0.
* dpost: PDF Bookmarks, titles and authorship information can be included
  into the generated PostScript for further processing by the distiller
  utility. See the file "PDFS" for details.
* [nt]roff: Hyphenation for languages other than English has been added
  using the "libhnj" variant from the OpenOffice project. The ".hylang"
  request has been introduced to select between languages. Hyphenation
  files have been derived from TeX sources.
* troff: The paper size can be selected with the ".papersize" request.
  This is important for correct placement of pages on PostScript printers.
* troff: Any point size can now be used with PostScript devices, including
  fractional sizes.
* troff: The ".fzoom" request allows to zoom the characters of a font.
* troff: Margin adjustments are supported.
* [nt]roff: The ".lc_ctype" request can be used to set the LC_CTYPE
  localization setting from within a document.
* troff: It is now possible to use "\[name]", where name is a character
  defined in the .afm file for the current font.
* troff: The ".track" request for tracking letter space has been added.
* troff: The ".fallback" request for selecting the order in which fonts
  are searched for missing characters in the current font has been added.
* troff: The ".hidechar" request hides characters from a font which are
  then searched using the fallback sequence.