@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.16 (gritter) 9/11/05
+ * Sccsid @(#)proto.h	1.17 (gritter) 9/11/05
  */
 
 /* n10.c */
@@ -55,6 +55,7 @@ void casedummy(void);
 #define	casepapersize	casedummy
 #define	caseladj	casedummy
 #define	caseradj	casedummy
+#define	casekernpair	casedummy
 
 #define	kernadjust(a, b)	0
 #define	u2pts(i)		(i)
